--- a/index.html
+++ b/index.html
@@ -1,76 +1,86 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mission — Comms Black Mobile</title>
-  <meta name="description" content="Comms Black Mobile — Our mission is to provide reliable mobile communication, repairs, and knowledge to empower users everywhere." />
-
-  <!-- SEO & Social -->
-  <meta property="og:title" content="Comms Black Mobile — Mission" />
-  <meta property="og:description" content="Our mission is to provide reliable mobile communication, repairs, and knowledge to empower users everywhere." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://civpronto.github.io/comms-black-mobile/" />
-  <meta property="og:image" content="https://civpronto.github.io/comms-black-mobile/assets/img/logo.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Security -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self';" />
-
-  <link rel="stylesheet" href="/comms-black-mobile/assets/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Commsblack Mobile - Mission</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a href="/comms-black-mobile/" class="brand">
-        <img src="/comms-black-mobile/assets/img/logo.svg" width="32" height="32" alt="Comms Black Mobile logo">
-        Comms Black Mobile
-      </a>
-      <nav class="nav">
-        <ul>
-          <li><a href="/comms-black-mobile/" aria-current="page">Mission</a></li>
-          <li><a href="/comms-black-mobile/products.html">Products</a></li>
-          <li><a href="/comms-black-mobile/academy.html">Academy</a></li>
-          <li><a href="/comms-black-mobile/faqs.html">FAQ’s</a></li>
-          <li><a href="/comms-black-mobile/contact.html">Contact</a></li>
+<body class="bg-gray-50 text-gray-800">
+
+  <!-- Header -->
+  <header class="bg-black text-white py-6 shadow-md">
+    <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
+      <h1 class="text-2xl font-bold">Commsblack Mobile</h1>
+      <nav>
+        <ul class="flex space-x-6 text-sm">
+          <li><a href="index.html" class="hover:underline">Mission</a></li>
+          <li><a href="products.html" class="hover:underline">Products</a></li>
+          <li><a href="academy.html" class="hover:underline">Academy</a></li>
+          <li><a href="faqs.html" class="hover:underline">FAQ’s</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="section">
-    <div class="container">
-      <h1>Our Mission</h1>
-      <p class="lead">At <strong>Comms Black Mobile</strong>, we believe in keeping people connected through affordable, reliable, and secure mobile solutions. Our mission blends technology, education, and service to empower every user.</p>
-
-      <section class="mission-block">
-        <h2>About Us</h2>
-        <p>We are a mobile communications and repair service provider committed to transparency, quality, and accessibility. Whether it’s a broken screen, a drained battery, or a question about protecting your data, we’re here to help.</p>
-      </section>
-
-      <section class="mission-block">
-        <h2>What Drives Us</h2>
-        <p>Technology moves fast, but our focus is simple: reliability, trust, and knowledge-sharing. We don’t just repair devices — we give people the tools and confidence to stay connected in today’s digital world.</p>
-      </section>
-
-      <section class="mission-block">
-        <h2>Why Comms Black Mobile?</h2>
-        <ul>
-          <li>✔ Affordable repairs without hidden costs</li>
-          <li>✔ Free educational resources via our Academy</li>
-          <li>✔ Strong focus on data privacy and user security</li>
-          <li>✔ Friendly, community-first approach</li>
-        </ul>
-      </section>
+  <!-- Hero Section -->
+  <section class="bg-gray-900 text-white py-20">
+    <div class="max-w-4xl mx-auto text-center px-6">
+      <h2 class="text-4xl font-extrabold mb-6">Private. Secure. Anonymous.</h2>
+      <p class="text-lg text-gray-300">Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
+      <a href="products.html" class="mt-8 inline-block bg-white text-black px-6 py-3 rounded-xl font-semibold hover:bg-gray-200">Explore Products</a>
     </div>
-  </main>
+  </section>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <p class="muted">© <span data-year></span> Comms Black Mobile — All rights reserved.</p>
+  <!-- Mission Content -->
+  <section class="py-16 bg-gray-50">
+    <div class="max-w-5xl mx-auto px-6 space-y-12">
+
+      <div>
+        <h3 class="text-2xl font-bold mb-4">Why We Exist</h3>
+        <p class="text-gray-700 leading-relaxed">
+          Big Tech and telecom providers profit from your data. Governments and third parties track your movements and communications. We exist to give you back control — with tools that protect your personal freedom, digital identity, and ability to connect on your own terms.
+        </p>
+      </div>
+
+      <div>
+        <h3 class="text-2xl font-bold mb-4">What We Offer</h3>
+        <p class="text-gray-700 leading-relaxed">
+          We build <strong>communication kits</strong> that combine hardened GrapheneOS phones, privacy hardware, and anonymous services. From simple, everyday privacy to sovereign global connectivity, each kit is tailored to your needs — whether you’re at home, traveling, or operating beyond the grid.
+        </p>
+      </div>
+
+      <div>
+        <h3 class="text-2xl font-bold mb-4">Who It’s For</h3>
+        <ul class="list-disc list-inside text-gray-700 space-y-2">
+          <li>Everyday users who value privacy</li>
+          <li>Professionals handling sensitive information</li>
+          <li>Travelers, operators, and global citizens</li>
+          <li>Anyone tired of being the product in the surveillance economy</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3 class="text-2xl font-bold mb-4">The Commsblack Difference</h3>
+        <ul class="list-disc list-inside text-gray-700 space-y-2">
+          <li>No unnecessary apps, bloat, or trackers</li>
+          <li>Anonymous and secure by default</li>
+          <li>Transparent about <strong>third-party service costs</strong> (for data, VoIP, or satellite) — these are charged by outside providers, not Commsblack Mobile</li>
+          <li>Simple, ready-to-use packages with initial data and credit included</li>
+          <li>Ongoing support to help you recharge or manage services easily</li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-black text-white py-6 mt-12">
+    <div class="max-w-7xl mx-auto px-6 text-center text-sm">
+      © 2025 Commsblack Mobile. All rights reserved.
     </div>
   </footer>
 
-  <script src="/comms-black-mobile/assets/js/main.js" defer></script>
 </body>
 </html>
